# Token-Manifold-Red-Teaming-TMRT-

./: COMPETITION_WRITEUP.md  DEMO_RECORDING_GUIDE.md  FINAL_COMPLETION_REPORT.md  GITHUB_SETUP_STATUS.md  IMPLEMENTATION_COMPLETE.md  LICENSE  README.md  SUBMISSION_QUICKSTART.md  changelog.md  demo_talking_points.md  kaggle.json  misc.md  openai_competition00.ipynb  overview.txt  production_setup.py  pyproject.toml  quick_validation.py  requirements-dev.txt  requirements-minimal.txt  requirements.txt  rule.txt  run_tmrt.py  test_framework.py  todo.md  toy_demo.py
FINAL_SUBMISSION_PACKAGE/: FINAL_STATUS_SUMMARY.json  README.md  SUBMISSION_CHECKLIST.json
advanced_research/: advanced_research_report_20250812_103215.json
competition_findings/: preparation_checklist.json
competition_submission/: final_enhancement_report_20250812_102714.json  final_enhancement_report_20250812_102734.json  final_validation_report_20250812_102120.json  final_validation_report_20250812_102331.json  tmrt_submission_20250812_051305_complete.json  tmrt_submission_20250812_051305_executive_summary.md  tmrt_submission_20250812_051305_findings_report.md  tmrt_submission_20250812_051305_kaggle.json  tmrt_submission_optimized_20250812_102323_complete.json
configs/: README.md  full_search.yaml  production.yaml  toy_demo.yaml
docker/: Dockerfile  entrypoint.sh
examples/: toy_demo.py
final_submission/: validation_report_20250812_111645.json
kaggle_dataset_openai_competition/: README.md  WRITEUP.md  dataset-metadata.json  openai-competition00-executed.ipynb  openai-competition00.ipynb
(+67 files in other folders)
